fix root usages